--- a/app/src/main/res/layout/activity_viewpager_test.xml
+++ b/app/src/main/res/layout/activity_viewpager_test.xml
@@ -6,7 +6,7 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:visibility="gone"
         android:layout_centerHorizontal="true"
         android:layout_height="fill_parent">
