--- a/app/src/main/res/layout/recycleview_item.xml
+++ b/app/src/main/res/layout/recycleview_item.xml
@@ -5,13 +5,13 @@
      >
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
         android:id="@+id/item"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:layout_gravity="center_vertical"
         android:background="@drawable/view_selector"
-        android:layout_height="100dp">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/info_text"
